charon/tests/ui/error-dependencies.out
error: Trait aliases are not supported
 --> /rustc/library/core/src/ptr/metadata.rs:84:1

note: the error occurred when translating `core::ptr::metadata::Thin`, which is (transitively) used at the following location(s):
  --> tests/ui/error-dependencies.rs:9:13
   |
 9 |     let _ = core::ptr::null::<u8>();
   |             -----------------------
...
16 |         let _ = custom_null::<u8>();
   |                 -------------------
17 |     }
18 |     fn custom_null<T: core::ptr::Thin>() {}
   |                       ---------------
error: Item `core::ptr::metadata::Thin` caused errors; ignoring.
 --> /rustc/library/core/src/ptr/metadata.rs:84:1

ERROR Charon failed to translate this code (2 errors)
